# vibe-killer

./: .envrc  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  REUSE.toml  check_errors.sh  flake.nix  justfile  vk.py
LICENSES/: LicenseRef-GAL.txt
src/: AGENTS.md  AGENTS.md.license  AGENTS_EVIL.md  dir_descriptions.rs  main.rs  write_basic.rs
templates/: AI_NOTICE.md  jokes.toml
