# SPDX-FileCopyrightText: 2026 The Vibe Killer contributers
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-GAL
# SPDX-FileContributor: Jakob Schwanenberg

[package]
name = "vibe-killer"
version = "0.0.0"
edition = "2024"
license = "EUPL-1.2"
repository = "https://codeberg/jak2k/dgen"

[[bin]]
name = "vk"
path = "src/main.rs"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"

serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

clap = { version = "4.6.1", features = ["derive"] }
handlebars = "6.4.1"

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
str_to_string = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
unwrap_used = "deny"
